--- a/asset_home/style_home/style_home.css
+++ b/asset_home/style_home/style_home.css
@@ -38,6 +38,9 @@ body{
     justify-content: center;
     align-items: center;
     gap: 40px;
+    /* width: 1146px; */
+    margin-left: auto;
+    margin-left: auto;
 }
 .header-item{
     color: #000;
@@ -47,14 +50,13 @@ body{
     font-weight: 400;
     line-height: normal;
 }
-.header-item_new{
-    color: #000;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-right: 500px;
+.color_home{
+    color: chocolate;
 }
+.header-item_new{
+    margin-right: 450px;
+}
+
 .intro{
     display: flex;
     /* gap: 128px; */
@@ -77,6 +79,7 @@ body{
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    width: 466px;
 }
 .intro_button{
     color: #FFF;
@@ -94,10 +97,66 @@ body{
 .intro_log{
     display: flex;
     justify-content: space-between;
-    width: 1200px;
-    flex-shrink: 0;
+    width: 1146px;
     gap: 97px;
     margin-left: auto;
     margin-right: auto;
-    padding: 150px;
+    margin-top: 247px;
+}
+.intro_button_wrapper{
+    display: flex;
+    gap: 72px;
+    margin-top: 52px;
+}
+.intro-item{
+    color: #AAA;
+    font-family: Gilroy-Bold;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration: none;
+    margin-top: 20px;
+}
+.intro_card{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 300px;
+    width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+}
+.intro_title_card{
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.intro_text_card{
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 22.5px */
+    width: 310px;
+    height: 42px;
+}
+.intro_item_card{
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 16.5px */
+    text-decoration: none;
+}
+.item_card{
+    background: #FFF;
+    box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+    width: 370px;
+    height: 291px;
 }
